--- a/hamptone-microservice-listing/src/main/resources/application.properties
+++ b/hamptone-microservice-listing/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.enabled=false
+
+service.security.source-key-username=${SOURCE_KEY_USERNAME}
+service.security.source-key-password=${SOURCE_KEY_PASSWORD}
+service.security.source-key-username-2=${SOURCE_KEY_USERNAME_2}
+service.security.source-key-password-2=${SOURCE_KEY_PASSWORD_2}
