--- a/hamptone-microservice-listing/src/main/resources/application.properties
+++ b/hamptone-microservice-listing/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=listing-service
-spring.config.import=file:env.properties
+spring.config.import=file:.env.properties
 server.port=${SERVER_LISTING_PORT}
 
-spring.datasource.url=jdbc:postgresql://localhost:${DB_LISTING_PORT}/${DB_SCHEMA_NAME}?currentSchema=${DB_LISTING_NAME}&ssl=false
+spring.datasource.url=jdbc:postgresql://localhost:${DB_LISTING_PORT}/${DB_NAME}?currentSchema=${DB_SCHEMA_NAME}&ssl=false
 spring.datasource.username=${DB_LISTING_USER}
 spring.datasource.password=${DB_LISTING_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
