add: security filter chain for auth

--- a/hamptone-microservice-purchase/src/main/resources/application.properties
+++ b/hamptone-microservice-purchase/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.config.import=file:.env.properties
 spring.application.name=${APPLICATION_NAME}
 server.port=${SERVER_LISTING_PORT}
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 spring.jpa.show-sql=true
 eureka.client.enabled=false
-
-
+service.security.source-key-username=${SOURCE_KEY_USERNAME}
+service.security.source-key-password=${SOURCE_KEY_PASSWORD}
 
