--- a/hamptone-api-gateway/src/main/resources/application.properties
+++ b/hamptone-api-gateway/src/main/resources/application.properties
@@ -4,13 +4,12 @@ server.port=${SERVER_PORT}
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.enabled=false
-
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration-in-ms=${JWT_EXP_TIME}
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
 service.security.source-key-password=${SOURCE_KEY_PASSWORD}
