--- a/hamptone-api-gateway/src/main/resources/application.properties
+++ b/hamptone-api-gateway/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.enabled=false
 app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-in-ms=${JWT_EXP_TIME}
+app.jwt.expiration-in-ms=${JWT_EXPIRATION_IN_MS}
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
 service.security.source-key-password=${SOURCE_KEY_PASSWORD}
