add: listing mapping in feign

--- a/hamptone-api-gateway/src/main/resources/application.properties
+++ b/hamptone-api-gateway/src/main/resources/application.properties
@@ -13,3 +13,4 @@ app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration-in-ms=${JWT_EXPIRATION_IN_MS}
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
 service.security.source-key-password=${SOURCE_KEY_PASSWORD}
+listing.service.url=${LISTING_SERVICE_URL}
