add: configuration to register services

--- a/hamptone-microservice-listing/src/main/resources/application.properties
+++ b/hamptone-microservice-listing/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 #show generated sql
 spring.jpa.show-sql=true
 
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=${SERVICE_URL}
 
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
 service.security.source-key-password=${SOURCE_KEY_PASSWORD}
