--- a/hamptone-microservice-purchase/src/main/resources/application.properties
+++ b/hamptone-microservice-purchase/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=${SERVICE_URL}
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
 service.security.source-key-password=${SOURCE_KEY_PASSWORD}
 
