--- a/hamptone-api-gateway/src/main/resources/application.properties
+++ b/hamptone-api-gateway/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=${SERVICE_URL}
 app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration-in-ms=${JWT_EXPIRATION_IN_MS}
 service.security.source-key-username=${SOURCE_KEY_USERNAME}
